# SmartAirlineMarketAnalyser

./: .gitignore  DEPLOYMENT.md  README.md  ai_analyzer.py  app.py  data_fetcher.py  main.py  pyproject.toml  replit.md  requirements.txt  setup.py  streamlit_app.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted-Test-Task-Build-a-Python-Web-App-for-Airline-Booking-Market-Demand-Data-We-are-a-group-of-hostels--1751522908418_1751522908430.txt
